added some image and style to my html

--- a/Palais_de_tokyo.html
+++ b/Palais_de_tokyo.html
@@ -8,11 +8,22 @@
     <link rel="stylesheet" href="Palais_de_tokyo.css">
 </head>
 <body>
-    <div class="block-logo"></div>
-    <div class="block-menu"></div>
+    <div class="block-logo"> 
+        <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="image-logo">
+    </div>
+    <div class="block-menu">
+        <a href="">son histoire |</a>
+        <a href="">Ses expositions</a>
+    </div>
     <div class="block-title"></div>
-    <div class="block-main"></div>
-    <div class="block-footer">rien|rien|rien</div>
+    <div class="block-main">
+        <img src="images/Copie-de-Design-sans-titre-2020-10-19T000904.662.jpg" alt="">
+        <a href=""></a>
+    </div>
+    <div class="block-footer">
+        <a href="" class="footer-text">Son histoire</a>
+        <a href="" class="footer-text">Ses expositions</a>
+    </div>
     <script></script>
 </body>
 </html>
