--- a/Palais_de_tokyo.html
+++ b/Palais_de_tokyo.html
@@ -6,23 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Palais_de_tokyo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="block-logo"> 
-        <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="image-logo">
+        <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="logo">
     </div>
     <div class="block-menu">
-        <a href="">son histoire |</a>
-        <a href="">Ses expositions</a>
+        <a href="" class="item-menu">Son histoire</a>
+        <span>|</span>
+        <a href="" class="item-menu">Ses expositions</a>
+        <span>|</span>
+        <a href="" class="item-menu">In english/français</a>
     </div>
-    <div class="block-title"></div>
+    <div class="block-title">
+        <a href="#" class="button-histoire">Son histoire</a>
+    </div>
     <div class="block-main">
-        <img src="images/Copie-de-Design-sans-titre-2020-10-19T000904.662.jpg" alt="">
-        <a href=""></a>
+        <div class="block-localisation">
+            <h3>Ou se trouve t'il:</h3>
+            <div class="palais-tokyo-adress">
+                <p>13 avenue du président Wilson,</p>
+                <p>75116, Paris</p>
+                <p>01 81 69 77 51</p>
+            </div>
+            <div class="palais-tokyo-social">
+                <a href=https://www.instagram.com/palaisdetokyo/><img src="images/Instagram_icon.png.webp" ></a>
+                <a href=https://mobile.twitter.com/palaisdetokyo><img src="images/tweeter.png"></a>
+                <a href=https://www.youtube.com/user/palaisdetokyo><img src="images/yutub.png"></a>
+                <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
+            </div>
+        </div>
+        <div class="block-main-map">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.342815149631!2d2.2959970083211028!3d48.86420480930287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe6f937420b%3A0xc92ed17a5e1ca31d!2sPalais%20de%20Tokyo!5e0!3m2!1sfr!2sfr!4v1666561062388!5m2!1sfr!2sfr" 
+                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
+        
+    <div class="block-map"></div>
     <div class="block-footer">
-        <a href="" class="footer-text">Son histoire</a>
-        <a href="" class="footer-text">Ses expositions</a>
+        <div>
+            <a href="" class="footer-link">Son histoire</a>
+            <span class="footer-link">|</span>
+            <a href="" class="footer-link">Ses expositions</a>
+            <span class="footer-link">|</span>
+            <a href="" class="footer-link">Contacts</a>
+        </div>
+        <div class="footer-link">
+            <a href=https://www.instagram.com/palaisdetokyo/><img src="images/Instagram_icon.png.webp" ></a>
+            <a href=https://mobile.twitter.com/palaisdetokyo><img src="images/tweeter.png"></a>
+            <a href=https://www.youtube.com/user/palaisdetokyo><img src="images/yutub.png"></a>
+            <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
+        </div>
     </div>
     <script></script>
 </body>
