--- a/Son-histoire-palais-de-tokyo.html
+++ b/Son-histoire-palais-de-tokyo.html
@@ -20,27 +20,11 @@
         <a href="" class="item-menu">In english/français</a>
     </div>
     <div class="block-title">
-        <a href="Son-histoire-palais-de-tokyo.html" class="button-histoire">Son histoire</a>
+        <a href="Palais_de_tokyo.html" class="button-histoire">Son histoire</a>
     </div>
     <div class="block-main">
-        <div class="block-localisation">
-            <h3>Ou se trouve t'il:</h3>
-            <div class="palais-tokyo-adress">
-                <p>13 avenue du président Wilson,</p>
-                <p>75116, Paris</p>
-                <p>01 81 69 77 51</p>
-            </div>
-            <div class="palais-tokyo-social">
-                <a href=https://www.instagram.com/palaisdetokyo/><img src="images/Instagram_icon.png.webp" ></a>
-                <a href=https://mobile.twitter.com/palaisdetokyo><img src="images/tweeter.png"></a>
-                <a href=https://www.youtube.com/user/palaisdetokyo><img src="images/yutub.png"></a>
-                <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
-            </div>
-        </div>
-        <div class="block-main-map">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.342815149631!2d2.2959970083211028!3d48.86420480930287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe6f937420b%3A0xc92ed17a5e1ca31d!2sPalais%20de%20Tokyo!5e0!3m2!1sfr!2sfr!4v1666561062388!5m2!1sfr!2sfr" 
-                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        rien
+        
     </div>
         
     <div class="block-map"></div>
