--- a/Son-histoire-palais-de-tokyo.html
+++ b/Son-histoire-palais-de-tokyo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Palais_de_tokyo.css">
+    <link rel="stylesheet" href="Palais_de_tokyo_histoire.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,11 +13,13 @@
         <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="logo">
     </div>
     <div class="block-menu">
-        <a href="" class="item-menu">Son histoire</a>
+        <a href="Son-histoire-palais-de-tokyo.html" class="item-menu">Son histoire</a>
         <span>|</span>
         <a href="" class="item-menu">Ses expositions</a>
         <span>|</span>
         <a href="" class="item-menu">In english/français</a>
+        <span>|</span>
+        <a href="Palais_de_tokyo.html" class="item-menu">Acceuil</a>
     </div>
     <div class="block-title">
         <a href="Palais_de_tokyo.html" class="button-histoire">Son histoire</a>
