finished my second page

--- a/Palais_de_tokyo.html
+++ b/Palais_de_tokyo.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="block-logo"> 
+    <header class="block-logo"> 
         <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="logo">
-    </div>
-    <div class="block-menu">
-        <a href="" class="item-menu">Son histoire</a>
+    </header>
+    <nav class="block-menu">
+        <a href="Son-histoire-palais-de-tokyo.html" class="item-menu">Son histoire</a>
         <span>|</span>
-        <a href="" class="item-menu">Ses expositions</a>
+        <a href="Ses-expositions.html" class="item-menu">Ses expositions</a>
         <span>|</span>
-        <a href="" class="item-menu">In english/français</a>
-    </div>
+        <a href="Palais_de_tokyo.html" class="item-menu">Accueil</a>
+    </nav>
     <div class="block-title">
         <a href="Son-histoire-palais-de-tokyo.html" class="button-histoire">Son histoire</a>
     </div>
-    <div class="block-main">
+    <main class="block-main">
         <div class="block-localisation">
             <h3>Ou se trouve t'il:</h3>
             <div class="palais-tokyo-adress">
@@ -41,10 +41,10 @@
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.342815149631!2d2.2959970083211028!3d48.86420480930287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fe6f937420b%3A0xc92ed17a5e1ca31d!2sPalais%20de%20Tokyo!5e0!3m2!1sfr!2sfr!4v1666561062388!5m2!1sfr!2sfr" 
                  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </div>
+    </main>
         
     <div class="block-map"></div>
-    <div class="block-footer">
+    <footer class="block-footer">
         <div>
             <a href="" class="footer-link">Son histoire</a>
             <span class="footer-link">|</span>
@@ -58,7 +58,8 @@
             <a href=https://www.youtube.com/user/palaisdetokyo><img src="images/yutub.png"></a>
             <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
         </div>
-    </div>
-    <script></script>
+    </footer>
+    <script>
+    </script>
 </body>
 </html>
