--- a/Son-histoire-palais-de-tokyo.html
+++ b/Son-histoire-palais-de-tokyo.html
@@ -15,7 +15,7 @@
     <nav class="block-menu">
         <a href="Son-histoire-palais-de-tokyo.html" class="item-menu">Son histoire</a>
         <span>|</span>
-        <a href="" class="item-menu">Ses expositions</a>
+        <a href="Ses-expositions.html" class="item-menu">Ses expositions</a>
         <span>|</span>
         <a href="Palais_de_tokyo.html" class="item-menu">Acceuil</a>
     </nav>
