--- a/Ses-expositions.html
+++ b/Ses-expositions.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="ses-expositions.css">
+    <link rel="stylesheet" href="css/ses-expositions.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="load_page();">
     <header class="block-logo"> 
         <img src="images/Capture d’écran 2022-10-23 125228.png" alt="" class="logo">
     </header>
@@ -116,11 +116,11 @@
     </main>
     <footer class="block-footer">
         <div>
-            <a href="" class="footer-link">Son histoire</a>
+            <a href="Son-histoire-palais-de-tokyo.html" class="footer-link">Son histoire</a>
             <span class="footer-link">|</span>
-            <a href="" class="footer-link">Ses expositions</a>
+            <a href="Ses-expositions.html" class="footer-link">Ses expositions</a>
             <span class="footer-link">|</span>
-            <a href="" class="footer-link">Contacts</a>
+            <a href="Palais_de_tokyo.html" class="footer-link">Accueil</a>
         </div>
         <div class="footer-social">
             <a href=https://www.instagram.com/palaisdetokyo/><img src="images/Instagram_icon.png.webp" ></a>
@@ -129,6 +129,6 @@
             <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
         </div>
     </footer>
-    <script src="tokyo.js"></script>
+    <script src="js/tokyo.js"></script>
 </body>
 </html>
