--- a/Son-histoire-palais-de-tokyo.html
+++ b/Son-histoire-palais-de-tokyo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Palais_de_tokyo_histoire.css">
+    <link rel="stylesheet" href="css/Palais_de_tokyo_histoire.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -27,10 +27,10 @@
             <div class="block-texte">
                 <p class="texte-histoire">L'histoire du palais</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Ut et massa mi. 
-                    Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, 
-                    mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
+                <p>Construit à l’occasion de l’Exposition internationale de 1937, 
+                    le bâtiment dénommé « Palais de Tokyo » tient son nom du « quai de Tokio » (l’actuelle avenue de New York). 
+                    Il est d’emblée conçu pour abriter deux musées bien distincts : le Musée d’art moderne de la Ville de Paris d’une part, 
+                    et le Musée national d’art moderne d’autre part.
                 </p>
             </div> 
         </div>
@@ -38,10 +38,10 @@
             <div class="block-texte">
                 <p class="texte-histoire">Son avenir</p>
                 <br>
-                <p>Lorem ipsum dolor sit amet, 
-                    consectetur adipiscing elit. Ut et massa mi. 
-                    Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, 
-                    mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus.
+                <p>Une librairie sera mise en place, Les Cahiers d'Art.
+                    Le little palais sera rénové et le HAMO lieu d'éducation 
+                    se voulant être inclusif via l'art ainsi que de pratiquer 
+                    l'art de manière universelle sera inauguré fin 2022.
                 </p>
             </div>
             <div class="block-image">
@@ -51,21 +51,19 @@
     </main>
     <footer class="block-footer">
         <div>
-            <a href="" class="footer-link">Son histoire</a>
+            <a href="Son-histoire-palais-de-tokyo.html" class="footer-link">Son histoire</a>
             <span class="footer-link">|</span>
-            <a href="" class="footer-link">Ses expositions</a>
+            <a href="Ses-expositions.html" class="footer-link">Ses expositions</a>
             <span class="footer-link">|</span>
-            <a href="" class="footer-link">Contacts</a>
+            <a href="Palais_de_tokyo.html" class="footer-link">Accueil</a>
         </div>
-        <div class="footer-link">
+        <div class="footer-social">
             <a href=https://www.instagram.com/palaisdetokyo/><img src="images/Instagram_icon.png.webp" ></a>
             <a href=https://mobile.twitter.com/palaisdetokyo><img src="images/tweeter.png"></a>
             <a href=https://www.youtube.com/user/palaisdetokyo><img src="images/yutub.png"></a>
             <a href=https://www.facebook.com/palaisdetokyo/><img src="images/faceboock2.png"></a>
         </div>
     </footer>
-    <script>
-
-    </script>
+    
 </body>
 </html>
